--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,47 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 
 		<style>
+			body {
+				--color-surface: white;
+				--color-primary: whitesmoke;
+				--color-detail: lightgray;
+				--color-text: #606c7;
+
+				--color-chip: var(--color-surface);
+				--color-chip-border: var(--color-detail);
+				--color-chip-hover: var(--color-primary);
+
+				--color-card: var(--color-surface);
+				--color-card-border: var(--color-detail);
+
+				--color-input: var(--color-text);
+
+				background-color: var(--color-surface);
+				color: var(--color-text);
+			}
+
+			.theme-dark {
+				--color-surface: #303742;
+				--color-primary: #15191e;
+				--color-detail: #15191e;
+				--color-text: whitesmoke;
+
+				--color-chip: #404a59;
+				--color-chip-border: #404a59;
+				--color-chip-hover: #4b5668;
+
+				--color-card: #20252c;
+				--color-card-border: #20252c;
+			}
+
+			input {
+				color: var(--color-input);
+			}
+
 			header {
 				position: sticky;
 				top: 0;
-				background-color: white;
+				background-color: var(--color-surface);
 			}
 
 			nav {
@@ -20,7 +57,7 @@
 				display: flex;
 				justify-content: space-between;
 				align-items: center;
-				background-color: whitesmoke;
+				background-color: var(--color-primary);
 			}
 
 			nav * {
@@ -39,6 +76,11 @@
 				max-width: inherit;
 			}
 
+			select {
+				background-color: var(--color-surface);
+				color: var(--color-text);
+			}
+
 			section {
 				padding: 1rem;
 			}
@@ -47,7 +89,7 @@
 				max-width: 1120px;
 				margin: 0 auto;
 				display: flex;
-				border-bottom: 1px solid lightgray;
+				border-bottom: 1px solid var(--color-detail);
 			}
 
 			#filter-area {
@@ -87,7 +129,8 @@
 			}
 
 			.chip {
-				border: 1px solid lightgray;
+				border: 1px solid var(--color-chip-border);
+				background-color: var(--color-chip);
 				border-radius: 1.5rem;
 				margin: 0.25rem;
 				padding: 0.3rem 1rem;
@@ -101,12 +144,13 @@
 			}
 
 			.chip:hover {
-				background-color: whitesmoke;
+				background-color: var(--color-chip-hover);
 				cursor: pointer;
 			}
 
 			.card {
-				border: 1px solid lightgray;
+				border: 1px solid var(--color-card-border);
+				background-color: var(--color-card);
 				border-radius: 1rem;
 				padding: 2rem;
 			}
@@ -132,8 +176,8 @@
 			}
 
 			.metric {
-				background-color: lightgray;
-				border: 1px solid lightgray;
+				background-color: var(--color-detail);
+				border: 1px solid var(--color-detail);
 				border-radius: 1rem;
 				margin-right: 1rem;
 				min-width: 7rem;
