Add darker bg to light themed card

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 				--color-chip-border: var(--color-detail);
 				--color-chip-hover: var(--color-primary);
 
-				--color-card: var(--color-surface);
+				--color-card: whitesmoke;
 				--color-card-border: var(--color-detail);
 
 				--color-input: var(--color-text);
