Capitalize search input placeholder

--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
 				<a href="#"><h4>dewy</h4></a>
 
 				<form class="inline">
-					<input type="search" placeholder="search">
+					<input type="search" placeholder="Search">
 					<button type="button" class="button">
 						<img src="img/magnify.svg">
 					</button>
