--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 				--color-chip: var(--color-surface);
 				--color-chip-border: var(--color-detail);
 				--color-chip-hover: var(--color-primary);
+				--chip-shadow-strength: 5%;
 
 				--color-card: whitesmoke;
 				--color-card-border: var(--color-detail);
@@ -37,6 +38,7 @@
 				--color-chip: #404a59;
 				--color-chip-border: #404a59;
 				--color-chip-hover: #4b5668;
+				--chip-shadow-strength: 12%;
 
 				--color-card: #20252c;
 				--color-card-border: #20252c;
@@ -135,8 +137,8 @@
 				margin: 0.25rem;
 				padding: 0.3rem 1rem;
 				line-height: 1.3;
-				-webkit-box-shadow: 0 0.2rem 0 rgb(0 0 0 / 5%);
-				box-shadow: 0 0.2rem 0 rgb(0 0 0 / 5%);
+				-webkit-box-shadow: 0 0.2rem 0 rgb(0 0 0 / var(--chip-shadow-strength));
+				box-shadow: 0 0.2rem 0 rgb(0 0 0 / var(--chip-shadow-strength));
 			}
 
 			.chip * {
