Link to main page in header

--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,7 @@
 	<body>
 		<header>
 			<nav>
-				<a href="#" class="brand">
+				<a href="./" class="brand">
 					<img src="img/dewy-ic.svg">
 					<h4>dewy</h4>
 				</a>
